--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,18 @@
             <version>1.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.10.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>2.29.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
